@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 2.012000 at Tue Feb 18 14:46:56 2014
+; vim: syntax=dosini
 name             = Dist-Zilla-Plugin-Prereqs-Soften
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
